--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1764,7 +1764,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #a8932e;
+  background: #ff2646;
 }
 .feed-link,
 .chat {
